# caffeine

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README  TODO  autogen.sh  caffeine.pc.in  configure.in  makefile.w32
doc/: Makefile.am  caffeine-docs.source
doc/en/: Caffeine.Jni.xml
doc/en/Caffeine.Jni/: IMember.xml  JArray.xml  JBooleanArray.xml  JByteArray.xml  JCharArray.xml  JClass.xml  JConstructor.xml  JDoubleArray.xml  JField.xml  JFloatArray.xml  JIntArray.xml  JLongArray.xml  JMethod.xml  JNIConfiguration.xml  JNIException.xml  JNISectionHandler.xml  JObject.xml  JObjectArray.xml  JShortArray.xml  JString.xml  JThrowable.xml  JValue.xml  JWeak.xml  JavaVM.xml
examples/: Makefile.am
examples/abstract/: Makefile.am  Template.cs  Template.java  TestAbstract.cs
examples/generators/: Makefile.am  Template.java  TestAbstract.cs  TestAbstract.exe.config
examples/hello/: HelloWorld.cs  HelloWorld.exe.config  Makefile.am  Prog.cs  Prog.java  java.hprof.txt
examples/interfaces/: Controllable.cs  Controllable.java  Makefile.am  Test.cs  Test.java  TestInterface.cs
examples/jms-client/: JMSSender.cs  JMSSender.exe.config  Makefile.am  NamingContextHelper.java  README
examples/object/: Makefile.am  TestObject.cs
glue/: Makefile.am  jninet.def  jvm.c
javart/: Makefile.am  sources  type-mapping.txt
lib/: LICENSE.dom4j  caffeinator.bat  caffeinator.sh  caffeinator.sh.orig  caffeinator.sh.rej
src/: Makefile.am
src/Caffeine.Caffeinator/: AssemblyInfo.cs.in  Class.cs  ClassFactory.cs  ClassFile.cs  Descriptor.cs  Field.cs  JarFile.cs  Main.cs  Makefile.am  Method.cs  PEemitter.cs  TypeGenerator.cs
src/Caffeine.Jni/: AssemblyInfo.cs.in  JArray.cs  JBooleanArray.cs  JByteArray.cs  JCharArray.cs  JClass.cs  JConstructor.cs  JDoubleArray.cs  JField.cs  JFloatArray.cs  JIntArray.cs  JLongArray.cs  JMember.cs  JMethod.cs  JNIEnv.cs  JNISectionHandler.cs  JObject.cs  JObjectArray.cs  JShortArray.cs  JString.cs  JThrowable.cs  JValue.cs  JWeak.cs  JavaVM.cs  Makefile.am
src/java/: Makefile.am
src/java/com/olympum/tools/: CsJniNetWrapperGenerator.java  JavaApiXmlGenerator.java
tests/generators/: AbstractInterface.java  Base.java  FieldMethodCollision.java  InterfaceInnerType.java  ReservedFieldKeywords.java  ReservedMethodKeywords.java  ReservedTypeKeywords.java  TypeMemberCollision.java
